added logger and fixed selectors